# feature-frontend

./: .env.example  .env.example.auth  .gitignore  .pre-commit-config.yaml  .todo.txt.swp  AGENTS.md  COMPLETE_SESSION_SUMMARY.md  COMPLETION_SUMMARY.md  DEVELOPER_DOCUMENTATION.md  FEATURE_ROADMAP.md  IMPLEMENTATION_PROGRESS.md  LICENSE  Makefile  PHASE3_SUMMARY.md  PHASE4_BILLING_SUMMARY.md  PHASE5_AUDIT_LOGGING_SUMMARY.md  PRODUCTION_QUICKSTART.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README_AUTH.md  SESSION2_SUMMARY.md  SESSION3_SUMMARY.md  SESSION_SUMMARY.md  alembic.ini  app.py  check_users.py  cleanup_unverified_users.py  clear_rate_limits.py  create_password_reset_table.py  create_schema_directly.py  debug_token.py  docker-compose.yml  pricing.json  pyproject.toml  requirements.txt  reset_password.py  setup_database.sh  test_admin_api.py  test_jwt_loading.py  (+5 more)
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202410091200_create_auth_foundations.py  202501101200_add_spend_records_and_limits.py  202510080830_add_subscription_tables.py  202510080910_add_superadmin_flag.py  202510081400_add_payment_transactions_table.py  202510081500_add_audit_events_table.py  202510081530_rename_audit_event_metadata_column.py  c426f17b6c01_add_rag_tables.py
app/: __init__.py  deps.py  main.py
app/agents/: archivist_agent.py  coder.py  cto.py  curator_agent.py  prompts.py
app/context/: __init__.py  compactor.py  curator.py  engine.py  memory_store.py  notes.py
app/core/: config.py  diffs.py  llm_logging.py  logging.py  pricing.py  shell.py
app/db/: engine.py  models.py  repo.py
app/embeddings/: __init__.py  openai_embed.py  provider.py  store.py
app/git/: github_client.py  repo_ops.py
app/llm/: ollama_provider.py  openai_provider.py  provider.py
app/routers/: context_api.py  events.py  files.py  health.py  jobs.py  memory.py  (+2 more)
backend/: app.py
docs/: CONFIGURATION.md  DEPLOYMENT.md  FRONTEND_AUTH_PAGES.md  IMPLEMENTATION_STATUS.md  TESTING_GUIDE.md  slo.md
examples/: embed.html
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
scripts/: generate_jwt_keys.py  load_smoke_test.py  run.ps1  run.sh  seed-context.ps1  seed-demo.ps1  seed-demo.sh  set_superadmin.py  setup.ps1  setup.sh  validate_openapi.py
src/: widget.ts
tasks/: task_1000_foundations.yaml  task_2000_registration.yaml  task_3000_login_2fa.yaml  task_4000_plans_limits.yaml  task_5000_admin_audit.yaml  task_6000_hardening_observability.yaml  task_7000_compliance.yaml  task_8000_deploy_env.yaml  task_9000_testing.yaml
tests/: e2e_context_test.py  e2e_demo_test.py
webui/: app_gradio.py
(+326 files in other folders)
