[project]
name = "auto-dev-orchestrator-py"
version = "0.1.0"
description = "Production-ready orchestration service for automated software delivery"
authors = [{ name = "AutoDev AI", email = "ops@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "celery>=5.3",
    "redis>=5.0",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "pydantic-settings>=2.2",
    "python-dotenv",
    "httpx>=0.25",
    "PyGithub>=2.1",
    "GitPython>=3.1",
    "python-dateutil",
    "tenacity",
    "pytz",
    "typing-extensions",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
